# savant

./: Cargo.toml  README.md  architecture.md  config
savant-parser/: Cargo.toml  README.md  dps_calculator_items.csv  items.csv
savant-parser/src/: main.rs
savant-parser/test_data/: full-dps.ods  truncated.csv
savant-zulrah/: Cargo.toml  README.md
savant-zulrah/src/: zulrah.rs
src/: main.rs  simulator.rs  zulrah.rs  zulrah2.rs
