[package]
name = "savant"
version = "0.1.0"
authors = ["Artemis <artemisrs@protonmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
randomize = "3.0.1"
getrandom = "0.2.0"
smallvec = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"

[profile.release]
debug = true
